--- a/jogos.html
+++ b/jogos.html
@@ -17,7 +17,7 @@
             <li><a class="link" href="index.html">Home</a></li>
            <li><a class="link" href="jogos.html">Jogos</a></li>
            <li><a class="link" href="celulares.html">Celulares</a></li>
-           <li><a class="link" href="informaticaclass=">Informática</a></li>
+           <li><a class="link" href="informatica.html">Informática</a></li>
            <li><a class="link" href="eletronicos.html">Eletrônicos</a></li>
            </ul>
         </nav>
