--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="img/imagem1.jpg" alt="Home office">
             <p>Com o avanço de 2025, uma nova tendência começa a ganhar força no setor corporativo: o retorno ao trabalho presencial. Segundo um estudo recente da Gupy, empresas de grande porte como Amazon e Google estão incentivando seus colaboradores a voltarem para os escritórios, após anos de popularização do home office. <br><br>
 
-Durante o período da pandemia, o trabalho remoto foi uma solução essencial para manter as operações em funcionamento. No entanto, agora, essas organizações argumentam que a presença física melhora a colaboração entre equipes, fortalece a cultura organizacional e impulsiona a inovação. <br><br>
+Durante o período da pandemia, o trabalho remoto foi uma solução essencial para manter as operações em funcionamento. No entanto, agora, essas organizações argumentam que a presença física melhora a colaboração entre equipes, fortalece a cultura organizacional e impulsiona a inovação. <br>br
 
 Ainda que o modelo híbrido continue presente em muitas empresas, o movimento de retorno aos escritórios demonstra uma reconfiguração nas relações de trabalho. Especialistas acreditam que essa mudança pode indicar uma nova fase de equilíbrio entre produtividade, bem-estar e convivência profissional. </p>
         </article>
